--- a/PWFE/FrameWorks/Angular/first-angular/src/app/footer/footer.component.html
+++ b/PWFE/FrameWorks/Angular/first-angular/src/app/footer/footer.component.html
@@ -1,1 +1,33 @@
-<p>footer works!</p>
+<link rel="stylesheet" href="footer.component.css">
+
+<footer>
+    <div class="mapa-footer">
+        <div class="mapa-footer-mapa">
+            <ul class="mapa">
+                <li><a href="/home">HOME</a></li>
+                <li><a href="/sobre">SOBRE</a></li>
+                <li><a href="/contato">CONTATO</a></li>
+            </ul>
+        </div>
+
+        <div class="mapa-footer-contato">
+            <ul class="contato">
+                <li><a href="">Chat</a></li>
+                <li><a href="">E-mail</a></li>
+                <li><a href="">Fale Conosco</a></li>
+                <li><a href="">FAQ</a></li>
+            </ul>
+        </div>
+
+        <div class="mapa-footer-redes">
+            <ul class="redes">
+                <li><a href="">Instagram</a></li>
+                <li><a href="">Whatsapp</a></li>
+                <li><a href="">Facebook</a></li>
+                <li><a href="">Youtube</a></li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="footer-copy">Copyright 2023</div>
+</footer>
