--- a/PWFE/FrameWorks/Angular/first-angular/src/app/header/header.component.html
+++ b/PWFE/FrameWorks/Angular/first-angular/src/app/header/header.component.html
@@ -1,9 +1,8 @@
-<p>header works!</p>
-
+<link rel="stylesheet" href="header.component.css">
 <nav>
     <ul>
-        <li><a routerLink="/header">Página de Cabeçalho</a></li>
-
-        <li><a routerLink="/footer">Página de Rodapé</a></li>
+        <li><a href="/home">HOME</a></li>
+        <li><a href="/sobre">SOBRE</a></li>
+        <li><a href="/contato">CONTATO</a></li>
     </ul>
 </nav>
