--- a/PWFE/FrameWorks/Angular/first-angular/src/app/app.component.html
+++ b/PWFE/FrameWorks/Angular/first-angular/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
 
-<router-outlet></router-outlet>
+<router-outlet></router-outlet> <!--Quem for entrar, entra aqui-->
 
 <app-footer></app-footer>
