--- a/PWFE/FrameWorks/Angular/first-angular/src/styles.css
+++ b/PWFE/FrameWorks/Angular/first-angular/src/styles.css
@@ -1,2 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
-@import "~bootstrap/dist/css/bootstrap.css";
+html{
+    height: 100%;
+    width: 100%;
+}
+body{
+    margin: 0;
+    padding: 0;
+}
