--- a/PWFE/FrameWorks/Angular/first-angular/src/app/footer/footer.component.html
+++ b/PWFE/FrameWorks/Angular/first-angular/src/app/footer/footer.component.html
@@ -1,33 +1,160 @@
 <link rel="stylesheet" href="footer.component.css">
 
 <footer>
-    <div class="mapa-footer">
-        <div class="mapa-footer-mapa">
-            <ul class="mapa">
-                <li><a href="/home">HOME</a></li>
-                <li><a href="/sobre">SOBRE</a></li>
-                <li><a href="/contato">CONTATO</a></li>
+    <div class="footer-top">
+        <div class="footer-top-institucional">
+            <div class="institucional-titulo">INSTITUCIONAL</div>
+
+            <div class="institucional-divisa"></div>
+
+            <ul class="institucional-content">
+                <li class="institucional-item">
+                    <a href="">Quem somos</a>
+                </li>
+
+                <li class="institucional-item">
+                    <a href="">Localização</a>
+                </li>
+
+                <li class="institucional-item">
+                    <a href="">Nossas lojas</a>
+                </li>
             </ul>
         </div>
 
-        <div class="mapa-footer-contato">
-            <ul class="contato">
-                <li><a href="">Chat</a></li>
-                <li><a href="">E-mail</a></li>
-                <li><a href="">Fale Conosco</a></li>
-                <li><a href="">FAQ</a></li>
+        <div class="footer-top-duvidas">
+            <div class="duvidas-titulo">DÚVIDAS</div>
+
+            <div class="duvidas-divisa"></div>
+
+            <ul class="duvidas-content">
+                <li class="duvidas-item">
+                    <a href="">Entregas</a>
+                </li>
+
+                <li class="duvidas-item">
+                    <a href="">Garantia</a>
+                </li>
+
+                <li class="duvidas-item">
+                    <a href="">Como comprar</a>
+                </li>
+
+                <li class="duvidas-item">
+                    <a href="">Formas de Pagamento</a>
+                </li>
+
+                <li class="duvidas-item">
+                    <a href="">Sobre Boletos</a>
+                </li>
             </ul>
         </div>
 
-        <div class="mapa-footer-redes">
-            <ul class="redes">
-                <li><a href="">Instagram</a></li>
-                <li><a href="">Whatsapp</a></li>
-                <li><a href="">Facebook</a></li>
-                <li><a href="">Youtube</a></li>
+        <div class="footer-top-ajuda">
+            <div class="ajuda-titulo">AJUDA</div>
+
+            <div class="ajuda-divisa"></div>
+
+            <ul class="ajuda-content">
+                <li class="ajuda-item">
+                    <a href="">SAC</a>
+                </li>
+
+                <li class="ajuda-item">
+                    <a href="">Fale conosco</a>
+                </li>
+
+                <li class="ajuda-item">
+                    <a href="">Termos de aceite</a>
+                </li>
+
+                <li class="ajuda-item">
+                    <a href="">Políticas de privacidade</a>
+                </li>
             </ul>
+        </div>
+
+        <div class="footer-top-duplo">
+
+            <div class="footer-duplo-pagamento">
+                <div class="pagamento-titulo">PAGAMENTO</div>
+
+                <div class="pagamento-divisa"></div>
+
+                <div class="cartao-container">
+                    <figure class="cartao-card-container">
+                        <a href="">
+                            <img class="cartao-card" src="/assets/imagens/dinners.png" alt="Diners">
+                        </a>
+                    </figure>
+
+                    <figure class="cartao-card-container">
+                        <a href="">
+                            <img class="cartao-card" src="/assets/imagens/maestro.png" alt="Express">
+                        </a>
+                    </figure>
+
+                    <figure class="cartao-card-container">
+                        <a href="">
+                            <img class="cartao-card" src="/assets/imagens/pngwing.com.png" alt="Maestro">
+                        </a>
+                    </figure>
+
+                    <figure class="cartao-card-container">
+                        <a href="">
+                            <img class="cartao-card" src="/assets/imagens/Mastercard.png" alt="Maestro">
+                        </a>
+                    </figure>
+
+                    <figure class="cartao-card-container">
+                        <a href="">
+                            <img class="cartao-card" src="/assets/imagens/visa.png" alt="Maestro">
+                        </a>
+                    </figure>
+
+                    <figure class="cartao-card-container">
+                        <a href="">
+                            <img class="cartao-card" src="/assets/imagens/santander.png" alt="Maestro">
+                        </a>
+                    </figure>
+                </div>
+            </div>
+
+            <div class="footer-duplo-newsletter">
+                <div class="newsletter-titulo">NEWSLETTER</div>
+
+                <div class="newsletter-divisa"></div>
+
+                <div class="cadastro-email">
+                    <div class="email">
+                        <div class="email-titulo">
+                            <h2>Receba ofertas exclusivas no seu e-mail</h2>
+                        </div>
+
+                        <form action="" method="post" id="form-cadastro-email" class="form-cadastro-email">
+
+                            <fieldset class="fieldset-email">
+                                <input type="text" name="input-cadastro-email" class="input-cadastro-email" id="input-cadastro-email" placeholder="E-mail">
+
+                                <!--
+                                <input type="submit" value="" name="input-cadastro-email-btn" class="input-cadastro-email-btn" id="input-cadastro-email-btn">
+                                -->
+                                
+                                <button type="submit" name="input-cadastro-email-btn" class="input-cadastro-email-btn" id="input-cadastro-email-btn">
+                                    <img src="/assets/imagens/seta.png" alt="">
+                                </button>
+                            </fieldset>
+
+                        </form>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </div>
 
-    <div class="footer-copy">Copyright 2023</div>
+    <div class="footer-bottom">
+        <h3>Copyright © 2000-2023 Latan.com.br LTDA. CNPJ 03.003.003/0001-03 / Av. das Ruas, nº 3, Centro,
+            Limeira/SP - CEP 00300-003</h3>
+    </div>
 </footer>
