--- a/PWFE/FrameWorks/Angular/first-angular/src/app/header/header.component.html
+++ b/PWFE/FrameWorks/Angular/first-angular/src/app/header/header.component.html
@@ -4,5 +4,6 @@
         <li><a href="/home">HOME</a></li>
         <li><a href="/sobre">SOBRE</a></li>
         <li><a href="/contato">CONTATO</a></li>
+        <li><a href="/formulario">FORMULÁRIO</a></li>
     </ul>
 </nav>
