--- a/PWFE/FrameWorks/Angular/curriculos-vagas-app/src/app/template/footer/footer.component.css
+++ b/PWFE/FrameWorks/Angular/curriculos-vagas-app/src/app/template/footer/footer.component.css
@@ -7,7 +7,7 @@
   /* Espaçamento interno para conteúdo do rodapé */
   text-align: center;
   /* Alinhar o texto ao centro */
-  position: absolute;
+  position: relative;
   bottom: 0;
   /* Fixa o rodapé no final da página */
   width: 100%;
