--- a/PWFE/FrameWorks/Angular/curriculos-vagas-app/src/app/template/header/header.component.html
+++ b/PWFE/FrameWorks/Angular/curriculos-vagas-app/src/app/template/header/header.component.html
@@ -19,6 +19,9 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/vagas">Vagas</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/painel">Painel Vagas</a>
+      </li>
     </ul>
   </div>
 </nav>
