Vagas-Curriculos OK

--- a/PWFE/FrameWorks/Angular/curriculos-vagas-app/src/app/template/header/header.component.html
+++ b/PWFE/FrameWorks/Angular/curriculos-vagas-app/src/app/template/header/header.component.html
@@ -17,10 +17,13 @@
         <a class="nav-link" routerLink="/curriculos">Currículos</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" routerLink="/painel-curriculos">Painel Currículos</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" routerLink="/vagas">Vagas</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/painel">Painel Vagas</a>
+        <a class="nav-link" routerLink="/painel-vagas">Painel Vagas</a>
       </li>
     </ul>
   </div>
