--- a/PWFE/FrameWorks/Angular/curriculos-vagas-app/src/app/view/curriculos/curriculos.component.html
+++ b/PWFE/FrameWorks/Angular/curriculos-vagas-app/src/app/view/curriculos/curriculos.component.html
@@ -9,7 +9,7 @@
         alt="..."
       />
       <div class="card-body">
-        <h5 class="card-title">Código da curriculo: {{ curriculo.id }}</h5>
+        <h5 class="card-title">Código do curriculo: {{ curriculo.id }}</h5>
         <h5 class="card-title">curriculo: {{ curriculo.nome }}</h5>
         <p class="card-text">Descricão da curriculo: {{ curriculo.descricao }}</p>
         <p class="card-text">Salário: R$ {{ curriculo.salario }},00</p>
